be longer than the lines of dashes.

Contributor             Current Email address           CHANGELOG entries found
~~~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~
Alistair Riddoch        <AlRiddoch@zepler.org>           1 Jan 1995-20 Oct 1999
Harry Kalogirou         <HarKal@rainbow.cs.unipi.gr>     7 Nov 2001
Michael McConnell	<Soruk@Eridani.co.uk>		11 Nov 2001-12 Nov 2001
Riley Williams          <rhw@MemAlpha.cx>                8 Nov 2001-12 Nov 2001

-------------------------------------------------------------------------------

Mon Nov 12 21:53:33 GMT 2001	Michael McConnell <soruk@eridani.co.uk>

	* Updated ELKS logo with transparent version.

Mon Nov 12 00:00:00 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Added "description" and "keywords" fields to all HTML headers.
	* Reformatted home page slightly.

Sun Nov 11 21:33:54 GMT 2001	Michael McConnell <soruk@eridani.co.uk>

	* Updated "Baby Linux" logo with transparent version.

Sun Nov 11 11:06:53 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Reformatted English FAQ. Much of this appears to be long out of
	  date, but I've added it as it stands for now, and will work
	  through it to bring it up to date once I have the rest of the
	  old ELKS website transferred across.

Sat Nov 10 10:21:11 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Added details of mailing lists.

Fri Nov  9 16:19:40 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Added outline index pages for FAQ, History and News subtrees.
	* Reformatted French FAQ. I don't read French, so can somebody who
	  does please check this document to ensure it is accurate.
	* Reformatted German FAQ. I don't read German, so can somebody who
	  does please check this document to ensure it is accurate.
	* Linked French and German FAQ's into FAQ index page.

Thu Nov  8 22:18:20 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Rationalised index.html page of dynamic snapshot.