@@ -74,6 +74,17 @@ ignored.</P>
 
 <HR Width=90%>
 
+<H2>Archive</H2>
+
+<P Align=Justify>An archive of the mailing list is maintained at
+<A
+HRef="http://rainbow.cs.unipi.gr/linux-8086-list">
+http://rainbow.cs.unipi.gr/linux-8086-list
+</A>.
+</P>
+
+<HR Width=90%>
+
 <P Align=Center>This document is released under the terms of the
 <A HRef="http://www.fsf.org/licenses/gpl.html">GNU General Public
 Licence</A>, version 2 only.</P>
